--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "start": "parcel src/index.html --open",
-    "build": "parcel build src/index.html"
+    "build": "rimraf dist && parcel build src/index.html"
   },
   "dependencies": {
     "antd": "^5.2.1",
@@ -19,6 +19,7 @@
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
     "parcel-bundler": "^1.12.5",
+    "rimraf": "^4.1.2",
     "sass": "^1.58.1",
     "typescript": "^4.9.5"
   }
