--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   },
   "dependencies": {
     "antd": "^5.2.1",
-    "chart.js": "^4.2.1",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
